--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,11 +5,11 @@ nav {
     background: #1a1919;
     display: flex;
     justify-content: center;
-    z-index: 1;
+    z-index: 10;
 }
 
 .z-index {
-    z-index: 2;
+    z-index: 20;
 }
 
 .navbar {
