--- a/src/pages/Home/ShoppingCart/Backdrop/Backdrop.css
+++ b/src/pages/Home/ShoppingCart/Backdrop/Backdrop.css
@@ -6,7 +6,7 @@
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.5);
     display: none;
-    z-index: 1;
+    z-index: 10;
 }
 
 .backdrop--open {
