--- a/src/pages/Home/ShoppingCart/Sidebar/Sidebar.css
+++ b/src/pages/Home/ShoppingCart/Sidebar/Sidebar.css
@@ -11,7 +11,7 @@
     width: 520px;
     transform: translateX(+100%);
     transition: all 0.4s;
-    z-index: 3;
+    z-index: 30;
 }
 
 section {
